<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="MAIN" Id="{74062979-64d8-427c-8bff-e0666190d48d}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR	

END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF NOT Variables.bStartStop THEN
	
	Variables.fJT1 := 0;
	Variables.fJT2 := 0;
	Variables.fJT3 := 0;
	Variables.fJT4 := 0;
	Variables.fJT5 := 0;
	Variables.fJT6 := 0;
	
	Variables.fRTx := 0;
	Variables.fRTy := 0;
	Variables.fRTz := 0;	
	Variables.fRTq1 := 0;
	Variables.fRTq2 := 0;
	Variables.fRTq3 := 0;
	Variables.fRTq4 := 0;
	
	Variables.fTDmass := 0;
	Variables.fTDx := 0;
	Variables.fTDy := 0;
	Variables.fTDz := 0;
	Variables.fTDq1 := 0;
	Variables.fTDq2 := 0;
	Variables.fTDq3 := 0;
	Variables.fTDq4 := 0;
	
	Variables.fTDcogx := 0;
	Variables.fTDcogy := 0;
	Variables.fTDcogz := 0;
	Variables.fTDcogq1 := 0;
	Variables.fTDcogq2 := 0;
	Variables.fTDcogq3 := 0;
	Variables.fTDcogq4 := 0;
	
	Variables.fTDix := 0;
	Variables.fTDiy := 0;
	Variables.fTDiz := 0;
	
	
	Variables.fWDox := 0;
	Variables.fWDoy := 0;
	Variables.fWDoz := 0;
	Variables.fWDoq1 := 0;
	Variables.fWDoq2 := 0;
	Variables.fWDoq3 := 0;
	Variables.fWDoq4 := 0;
	
	Variables.fWDux := 0;
	Variables.fWDuy := 0;
	Variables.fWDuz := 0;
	Variables.fWDuq1 := 0;
	Variables.fWDuq2 := 0;
	Variables.fWDuq3 := 0;
	Variables.fWDuq4 := 0;
	
END_IF


COMM_CISS();]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="3" Count="58" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>